--- a/GettinAPILibrary/GettinAPILibrary.csproj
+++ b/GettinAPILibrary/GettinAPILibrary.csproj
@@ -28,11 +28,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OrganiserFactory.cs" />
+    <Compile Include="Organisers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="APIConnector.cs" />
+    <Compile Include="Organiser.cs" />
+    <Compile Include="GettinEvents.cs" />
+    <Compile Include="GettinEvent.cs" />
+    <Compile Include="IApiSource.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
