--- a/GettinAPILibraryTests/GettinAPILibraryTests.csproj
+++ b/GettinAPILibraryTests/GettinAPILibraryTests.csproj
@@ -30,9 +30,13 @@
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="OrganiserFactoryTest.cs" />
+    <Compile Include="EventFactoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
